commented out file string line